# robots

./: .gitignore  README.md  pyproject.toml  requirements.txt
align/: align.py
analysis/: pipeline.py  raycast.py  validity.py
assets/franka_emika_panda/: panda.xml  scene_teleop.xml
attention/: a_of_t.py  features.py
ingest/: base.py  pupil_adapter.py  slo_adapter.py  synthetic.py
policy/: attention_bc.py
recording/: schema.py
scripts/: _smoke_env.py  record_scripted_session.py
teleop/: calibrate.py  display.py  env.py  run_session.py  spacemouse.py  sync.py
